# common-framework

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build.sh  build_run_steps.sh  run.sh
Framework/: .clang-format  CMakeLists.txt  README.md
Framework/OffSM4topsTool/: CMakeLists.txt
Framework/OffSM4topsTool/OffSM4topsTool/: Add1LOSVar.h
Framework/OffSM4topsTool/Root/: Add1LOSVar.cxx  OffSM4topsToolDictionary.cxx
Framework/SM4topsCommon/: CMakeLists.txt
Framework/SM4topsSS3L/: CMakeLists.txt
Framework/SM4topsSS3L/Root/: EventDecorator.cxx  LeptonChannelSelector.cxx  LeptonVectorDecorator.cxx  LinkDef.h  MllSelector.cxx  MllWindowSelector.cxx  Muon.cxx  SM4topsSS3LLoader.cxx  SM4topsSS3LObjectLoader.cxx  SSOSDilepSelector.cxx  TrigMatch.cxx  TruthMatchSelector.cxx  ZVetoSelector.cxx
Framework/SM4topsSS3L/SM4topsSS3L/: EventDecorator.h  LeptonChannelSelector.h  LeptonVectorDecorator.h  MllSelector.h  MllWindowSelector.h  Muon.h  SM4topsSS3LLoader.h  SM4topsSS3LObjectLoader.h  SSOSDilepSelector.h  TrigMatch.h  TruthMatchSelector.h  ZVetoSelector.h
Framework/TTHbbAnalysis/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  all  package_filters.txt  updateAnalysisTop.sh
Framework/TTHbbAnalysis/FourTopTools/: CMakeLists.txt
Framework/TTHbbAnalysis/FourTopTools/FourTopTools/: FourTopToolsLoader.h  FourTopVariables.h
Framework/TTHbbAnalysis/FourTopTools/Root/: FourTopToolsLoader.cxx  FourTopVariables.cxx  LinkDef.h
postProd/: Variables1LOS.txt  VariablesToRead.txt  VariablesToSave.txt  config1LOS_MC16a.txt  configuration.txt  configuration_bucketTopson.txt  cuts_1l_mc16a_4TA_datamc.txt  weights.txt  weights1LOS.txt
preProd/: 01SubmitToGrid_simple.py  cuts_data_SM4tops_SS3L.txt  cuts_data_SM4tops_ljetsOS.txt  cuts_mc16a_SM4tops_SS3L.txt  cuts_mc16a_SM4tops_SS3L_jer.txt  cuts_mc16a_SM4tops_SS3L_pflow.txt  cuts_mc16a_SM4tops_SS3L_skim.txt  cuts_mc16a_SM4tops_SS3L_sys.txt  cuts_mc16a_SM4tops_ljetsOS.txt  cuts_mc16a_SM4tops_ljetsOS_jer.txt  cuts_mc16a_SM4tops_ljetsOS_pflow.txt  cuts_mc16a_SM4tops_ljetsOS_skim.txt  cuts_mc16a_SM4tops_ljetsOS_sys.txt  cuts_mc16c_SM4tops_SS3L.txt  cuts_mc16c_SM4tops_SS3L_jer.txt  cuts_mc16c_SM4tops_SS3L_pflow.txt  cuts_mc16c_SM4tops_SS3L_skim.txt  cuts_mc16c_SM4tops_SS3L_sys.txt  cuts_mc16c_SM4tops_ljetsOS.txt  cuts_mc16c_SM4tops_ljetsOS_jer.txt  cuts_mc16c_SM4tops_ljetsOS_pflow.txt  cuts_mc16c_SM4tops_ljetsOS_skim.txt  cuts_mc16c_SM4tops_ljetsOS_sys.txt  cuts_mc16d_SM4tops_SS3L.txt  cuts_mc16d_SM4tops_SS3L_jer.txt  cuts_mc16d_SM4tops_SS3L_pflow.txt  cuts_mc16d_SM4tops_SS3L_skim.txt  cuts_mc16d_SM4tops_SS3L_sys.txt  cuts_mc16d_SM4tops_ljetsOS.txt  cuts_mc16d_SM4tops_ljetsOS_jer.txt  cuts_mc16d_SM4tops_ljetsOS_pflow.txt  cuts_mc16d_SM4tops_ljetsOS_skim.txt  cuts_mc16d_SM4tops_ljetsOS_sys.txt  cuts_mc16e_SM4tops_ljetsOS.txt  data_SM4tops.py  data_SS3L_list.txt  mc16a_SM4tops.py  mc16a_SS3L_list.txt  mc16c_SM4tops.py  mc16d_SM4tops.py  (+6 more)
run/: VariablesToRead.txt  config1LOS_MC16a.txt  configuration.txt  inputs.txt
run-offline/: .asetup.save  CMakeCache.txt  VariablesToSave.txt  configuration_bucketTopson.txt  list-input.txt  list-input_410470_a875.txt  list-input_410470_a875_test.txt  list-input_mc16d.txt  list-input_mc16d_test.txt  list-input_ttbar_mc16d_test.txt  list-input_ttbarallhad_mc16d_test.txt  run_mc16d_310845.sh  run_mc16d_410470.sh  run_mc16d_410471.sh  weights.txt  weights1LOS.txt
run-offline/plots/: .asetup.save  B1wt100nonb1.eps  B1wt100nonb2.eps  B1wt100nonbISR.eps  B1wt100nonbinit.eps  B1wt10nonb1.eps  B1wt10nonb2.eps  B1wt10nonbISR.eps  B1wt10nonbinit.eps  (+43 more)
run-offline_BAK/: Variables1LOS.txt  cuts_1l_mc16a_4TA_datamc.txt  run_script.sh
tests/: README.md
(+1562 files in other folders)
